# VibeCoding

./: .gitignore  README.md  config_template.env  index.html  qwen3_agent_example.py  requirements.txt
.cursor/plans/: 智能数据分析系统_4阶段实施计划_35e2e61e.plan.md
AIData/: qwen3_example.py  qwen3_local_ollama.py
AIData/.cursor/plans/: 智能数据分析系统_v2_35e2e61e.plan.md
AIData/.cursor/rules/: dev-workflow.mdc
AIData/backend/: README.md  pyproject.toml  requirements.txt  setup.bat
AIData/backend/app/: __init__.py  main.py
AIData/backend/app/agents/: __init__.py  edges.py  graph.py  nodes.py
AIData/backend/app/config/: settings.py
AIData/backend/app/core/: __init__.py  llm.py  prompts.py  safety.py
AIData/backend/app/models/: __init__.py  database.py
AIData/backend/app/routers/: __init__.py  chat.py  query.py  schema.py  session.py
AIData/backend/app/services/: __init__.py  db_service.py  session_service.py
AIData/backend/scripts/: init_db.py
AIData/frontend/: README.md  index.html  package-lock.json  package.json
AIData/frontend/src/: App.tsx  index.css
AIData/frontend/src/api/: chat.ts  client.ts  session.ts
AIData/frontend/src/components/chart/: ChartPanel.tsx  ChartRenderer.tsx  ChartSelector.tsx  DataTable.tsx
AIData/frontend/src/components/chat/: ChatArea.tsx  ChatInput.tsx  MessageBubble.tsx  SqlBlock.tsx
AIData/frontend/src/stores/: useAppStore.ts
IntroductionWeb/.cursor/plans/: 科幻风个人主页_prd_规划_a2546910.plan.md  黎潇说明书_prd规划.md
TianJiao/: 520-plan.md  fix_lyrics.py
TianJiao/520-website/: index.html
(+3 files in other folders)
