[project]
name = "aidata-backend"
version = "0.1.0"
description = "Intelligent Data Analysis System - Backend"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.19.0",
    "python-dotenv>=1.0.0",
    "dashscope>=1.20.0",
    "langchain>=0.1.0",
    "langgraph>=0.0.20",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "cors-any>=0.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uvicorn]
host = "0.0.0.0"
port = 8000
reload = true
